Implemented message update middlewares and updated api docs
